--- a/homework.ipynb
+++ b/homework.ipynb
@@ -4831,7 +4831,7 @@
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p9 = q9.predict(pd.DataFrame({'age': [19]}))"
+    "p9 = q9.predict_proba(pd.DataFrame({'age': [19]}))"
    ]
   },
   {
@@ -4842,7 +4842,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0])"
+       "array([[0.76715522, 0.23284478]])"
       ]
      },
      "execution_count": 28,
@@ -5698,27 +5698,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p12 = set([(x, y) for x, y in zip(range(-5, 6), range(-5, 6)) if (x ** 2) + (y ** 2) <= 25])"
+    "p12 = set([(x, y) for x in range (-5, 6) for y in range(-5, 6) if (x ** 2) + (y ** 2) <= 25])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(-3, -3), (-2, -2), (-1, -1), (0, 0), (1, 1), (2, 2), (3, 3)}"
+       "{(-5, 0),\n",
+       " (-4, -3),\n",
+       " (-4, -2),\n",
+       " (-4, -1),\n",
+       " (-4, 0),\n",
+       " (-4, 1),\n",
+       " (-4, 2),\n",
+       " (-4, 3),\n",
+       " (-3, -4),\n",
+       " (-3, -3),\n",
+       " (-3, -2),\n",
+       " (-3, -1),\n",
+       " (-3, 0),\n",
+       " (-3, 1),\n",
+       " (-3, 2),\n",
+       " (-3, 3),\n",
+       " (-3, 4),\n",
+       " (-2, -4),\n",
+       " (-2, -3),\n",
+       " (-2, -2),\n",
+       " (-2, -1),\n",
+       " (-2, 0),\n",
+       " (-2, 1),\n",
+       " (-2, 2),\n",
+       " (-2, 3),\n",
+       " (-2, 4),\n",
+       " (-1, -4),\n",
+       " (-1, -3),\n",
+       " (-1, -2),\n",
+       " (-1, -1),\n",
+       " (-1, 0),\n",
+       " (-1, 1),\n",
+       " (-1, 2),\n",
+       " (-1, 3),\n",
+       " (-1, 4),\n",
+       " (0, -5),\n",
+       " (0, -4),\n",
+       " (0, -3),\n",
+       " (0, -2),\n",
+       " (0, -1),\n",
+       " (0, 0),\n",
+       " (0, 1),\n",
+       " (0, 2),\n",
+       " (0, 3),\n",
+       " (0, 4),\n",
+       " (0, 5),\n",
+       " (1, -4),\n",
+       " (1, -3),\n",
+       " (1, -2),\n",
+       " (1, -1),\n",
+       " (1, 0),\n",
+       " (1, 1),\n",
+       " (1, 2),\n",
+       " (1, 3),\n",
+       " (1, 4),\n",
+       " (2, -4),\n",
+       " (2, -3),\n",
+       " (2, -2),\n",
+       " (2, -1),\n",
+       " (2, 0),\n",
+       " (2, 1),\n",
+       " (2, 2),\n",
+       " (2, 3),\n",
+       " (2, 4),\n",
+       " (3, -4),\n",
+       " (3, -3),\n",
+       " (3, -2),\n",
+       " (3, -1),\n",
+       " (3, 0),\n",
+       " (3, 1),\n",
+       " (3, 2),\n",
+       " (3, 3),\n",
+       " (3, 4),\n",
+       " (4, -3),\n",
+       " (4, -2),\n",
+       " (4, -1),\n",
+       " (4, 0),\n",
+       " (4, 1),\n",
+       " (4, 2),\n",
+       " (4, 3),\n",
+       " (5, 0)}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6104,7 +6184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6115,7 +6195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -6305,7 +6385,7 @@
        "[573 rows x 9 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6318,7 +6398,18 @@
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.6509598603839442)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# did women and children have higher survival rates?\n",
     "\n",
@@ -6338,7 +6429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6353,7 +6444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -6570,7 +6661,7 @@
        "[319 rows x 8 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
