--- a/homework.ipynb
+++ b/homework.ipynb
@@ -4842,7 +4842,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.76715522, 0.23284478]])"
+       "array([[0.76540205, 0.23459795]])"
       ]
      },
      "execution_count": 28,
@@ -5634,7 +5634,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9118627918056217"
+       "0.9113863744640305"
       ]
      },
      "execution_count": 31,
@@ -5698,7 +5698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5709,7 +5709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -5798,7 +5798,7 @@
        " (5, 0)}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5872,7 +5872,7 @@
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p14 = ..."
+    "p14 = np.loadtxt(\"p14.txt\", delimiter=\":\")"
    ]
   },
   {
@@ -5883,7 +5883,8 @@
     {
      "data": {
       "text/plain": [
-       "Ellipsis"
+       "array([[3., 4., 5.],\n",
+       "       [2., 6., 7.]])"
       ]
      },
      "execution_count": 39,
